--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: joek47.github.io
-description: Machine Learning
+title: Machine Learning
+description: joek47.github.io
