--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Machine Learning
+title: Malicious URL Detection
 description:
 github:
   is_project_page: false
